密码默认加密方式改为AES